--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 * {
     font-family: sans-serif;
+    padding:0px;
+    margin:0px;
 
 
 }
@@ -8,6 +10,7 @@ main {
     background-color: white;
     margin-left: 2%;
     margin-right: 2%;
+    max-width: 1020px;
 
 }
 
@@ -18,6 +21,7 @@ header {
     background-image: url(../img/pattern.png);
     background-repeat: repeat-x;
     background-size: 400px;
+
 }
 
 .logo {
@@ -41,6 +45,7 @@ header {
 .image {
     max-width: 100%;    
     height: auto;
+    position: relative;
 }
 
 h1 {
@@ -84,3 +89,11 @@ td {
     width: 90px;
 }
 
+.onimage {
+    position: absolute;
+    top: 10px;
+    left: 16px;
+    color: white;
+    font-weight: bold;
+
+}
