--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,13 @@ main {
 
 }
 
+.conteiner {
+    margin: auto;
+    max-width: 1020px;
+    vertical-align: middle;
+
+}
+
 header {
     width: 100%;
     height: 100px;
@@ -27,7 +34,6 @@ header {
 .logo {
     height: 60px;
     margin-top: 40px;
-    margin-left: 10px;
 }
 
 .maintitle {
